--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <footer>
     <a href="https://www.apple.com">Apple Website</a>
     <br>
-    &copy Created by MRD
+    &copy; Created by MRD
 </footer>
 </body>
 </html>
