--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <li>Docks: MAC Laptops work with many dock types with no issues</li>
 </ul>
 <p>Heres some pictures of MACs:</p>
-<img src="images/MAC_Chrome.jpg" alt="Macbook on a desk with chrome open" width="25%">
-<img src="images/MAC_Iphone.jpg" alt="Macbook with and iphone sitting next to it" width="25%"> 
-<img src="images/MAC_Office.jpg" alt="Macbook on an office desk" width="25%">
+<img src="images/MAC_Chrome.jpg" alt="Macbook on a desk with chrome open" width="200">
+<img src="images/MAC_Iphone.jpg" alt="Macbook with and iphone sitting next to it" width="200"> 
+<img src="images/MAC_Office.jpg" alt="Macbook on an office desk" width="200">
 </main>
 <footer>
     <a href="https://www.apple.com">Apple Website</a>
